ws_lidar/log/build_2025-02-22_15-25-57/gpsPubSub/stderr.log
  File "/home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub/subscribeGPS.py", line 34
    x = x * #14.3
            ^^^^^
SyntaxError: invalid syntax

